# DarkPools-A2A

./: .gitignore  README.md  pyproject.toml
Desktop/sl-compute/: .gitignore  Cargo.toml  README.md  build.rs  sample-fi.xml  threshold_dec.md
Desktop/sl-compute/benches/: sl-compute.rs
Desktop/sl-compute/circuit/: adder64.txt  aes128.txt  aes256.txt  comparator_32_bit_unsigned.txt  fp_lt.txt  sha256.txt  sha256_test.txt  zero_equal.txt
Desktop/sl-compute/crates/sahamati/: Cargo.toml
Desktop/sl-compute/python_wrapper/: example_usage.py  requirements.txt
Desktop/sl-compute/python_wrapper/compare_ge/: __init__.py  compare_ge_wrapper.py
Desktop/sl-compute/shares/: README.md  aeswithoutMPC.py  bank_statement_consolidated.json  create_encryptions.py  join_roh_bank.json  join_roh_bank_encrypted.json  join_roh_return.json  join_roh_return_encrypted.json  join_roh_users.json  join_roh_users_encrypted.json  json_create.py  lengths.py  queries.py  retail_customerreturns.json  retail_order_history.json  users_table.json
Desktop/sl-compute/shares/p1_shares/: join_roh_bank_p1.json  join_roh_return_p1.json  join_roh_users_p1.json
Desktop/sl-compute/shares/p2_shares/: join_roh_bank_p2.json  join_roh_return_p2.json  join_roh_users_p2.json
Desktop/sl-compute/shares/p3_shares/: join_roh_bank_p3.json  join_roh_return_p3.json  join_roh_users_p3.json
Desktop/sl-compute/spec/: Makefile  spec_complete.tex
Desktop/sl-compute/spec/arith_int/: ArticleArithInt.tex  Makefile  add.tex  arith_int.tex  conversion.tex  functionality.tex  io.tex  mult_const.tex  share_representation.tex
Desktop/sl-compute/spec/arith_mod/: ArticleArithMod.tex  Makefile  add.tex  arith_mod.tex  functionality.tex  io.tex  mult_const.tex  share_representation.tex
Desktop/sl-compute/spec/bool_bit/: ArticleBoolBit.tex  Makefile  bool_bit.tex  functionality.tex  input_output.tex  linear_ops.tex  multiplexer.tex  non_linear_ops.tex  output.tex  preprocessing.tex  random.tex  share_io.tex  share_representation.tex
Desktop/sl-compute/spec/bool_galois/: ArticleBoolGalois.tex  Makefile  add.tex  bool_galois.tex  conversions.tex  inner_prod_with_error.tex  intro.tex  io.tex  mult_const.tex  mult_with_error.tex  random.tex  share_representation.tex
Desktop/sl-compute/spec/bool_int/: ArticleBoolInt.tex  Makefile  add_sub.tex  bint_io.tex  bit_shifts.tex  bool_int.tex  comparison.tex  functionality.tex  multiplexer.tex  rand_bint.tex  share_representation.tex
Desktop/sl-compute/spec/cryptobib/: extra.bib
Desktop/sl-compute/spec/intro/: ArticleIntro.tex  Makefile  abb_arrays.tex  abb_model.tex  abb_notation.tex  abb_support.tex  intro.tex  map_reduce.tex  overview.tex
Desktop/sl-compute/spec/macros/: macros.tex  symbols.tex
Desktop/sl-compute/spec/shuffle_sort/: ArticleShuffleSort.tex  Makefile  intro.tex  shuffle.tex  shuffle_sort.tex
Desktop/sl-compute/spec/yao_bit/: ArticleYaoBit.tex  Makefile  arith_convert.tex  arith_gadget.tex  arith_zp_convert.tex  bit_convert.tex  evaluate.tex  garble.tex  input.tex  intro.tex  setup.tex  share_representation.tex  yao_bit.tex
Desktop/sl-compute/src/: constants.rs  galois_abb.rs  lib.rs  proto.rs  types.rs
Desktop/sl-compute/src/aes/: aes_gcm.rs  mod.rs
Desktop/sl-compute/src/comparison/: compare_equal.rs  compare_ge.rs  compare_ge_ec.rs  mod.rs
Desktop/sl-compute/src/conversion/: a_to_b.rs  b_to_a.rs  binary_ec_subtract.rs  ec_arith_to_b.rs  ec_to_a.rs  ec_to_b.rs  helper_function.rs  mod.rs
Desktop/sl-compute/src/keygen/: asn.rs  dkg.rs  field25519.rs  keyshare.rs  mod.rs  proto.rs
Desktop/sl-compute/src/mpc/: circuit.rs  circuit_eval.rs  common_randomness.rs  mod.rs  multiply_binary_shares.rs  open_protocol.rs  preprocess.rs  verify.rs
Desktop/sl-compute/src/transport/: init.rs  mod.rs  pairs.rs  proto.rs  setup.rs  test_utils.rs  types.rs  utils.rs
backend/: Cargo.toml  order_matches.txt
backend/src/: lib.rs  main.rs  relay.rs  types.rs  v1.rs  websocket_relay.rs
(+69 files in other folders)
