[package]
name = "backend"
version = "0.1.0"
edition = "2024"

[dependencies]
aes = "0.8.4"
pkg-config = "0.3.30"
rand = "0.8"
rand_chacha = "0.3.1"
sha2 = "0.10.8"
seeded-random = "0.6"
rand_xorshift = "0.3"
serde = { version = "1.0.214", features = ["derive"] }
serde_json = "1.0.131"
chrono = "0.4"
hex = "0.4"
encoding_rs = "0.8"
num-integer = "0.1"
rayon = "1.10.0"
base64 = "0.22.1"
rust_decimal = "1.36.0"
num-bigint = "0.4"
crypto-bigint = { version = "0.5.5", features = ["serde"] }
num-traits = "0.2"
sl-mpc-mate = { git = "https://github.com/silence-laboratories/sl-crypto.git", rev = "ff63353", features = ["simple-relay"] }
sl-compute = { git = "https://github.com/silence-laboratories/sl-compute.git", branch = "sahamati-queries" }
merlin = "3.0.0"
tokio = { version = "1.24.1", features = ["full"] }
elliptic-curve = { version = "0.13" }
curve25519-dalek = { version = "4.1.3", features = [
    "rand_core",
    "precomputed-tables",
    "digest",
    "group",
    "serde"
]}
aws-lc-sys = "0.29.0"
url = "2.5.4"
tracing = "0.1"
tracing-subscriber = { version = "0.3", default-features = false }
anyhow = "1.0.98"
futures-util = { version = "0.3.30", default-features = false }
bytes = { version = "1" }
tokio-tungstenite = { version = "0.26", features =["rustls-tls-webpki-roots"]  } # because axum uses this version