[package]
name = "sl-compute"
version = "0.1.0"
edition = "2021"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
debug = true

[features]
default = ["tracing"]
test-support = ["sl-mpc-mate/simple-relay"]

[dependencies]
aes = "0.8.4"
pkg-config = "0.3.30"
rand = "0.8"
rand_chacha = "0.3.1"
sha2 = "0.10.8"
seeded-random = "0.6"
rand_xorshift = "0.3"
serde = { version = "1.0.214", features = ["derive"] }
serde_json = "1.0.131"
chrono = "0.4"
hex = "0.4"
encoding_rs = "0.8"
num-integer = "0.1"
rayon = "1.10.0"
base64 = "0.22.1"
num-bigint = "0.4"
crypto-bigint = { version = "0.5.5", features = ["serde", "alloc"] }
num-traits = "0.2"
thiserror = "2.0.3"
pkcs8 = { version = "0.10.2", features = ["pem"] }
elliptic-curve = { version = "0.13" }
curve25519-dalek = { version = "4.1.3", features = [
    "rand_core",
    "precomputed-tables",
    "digest",
    "group",
    "serde"
]}
asn1 = "0.20.0"
x25519-dalek = { version = "2.0.1", features = ["getrandom", "static_secrets", "reusable_secrets"] }
reqwest = { version="0.12.9" , features = ["json"] }
tracing = { version = "0.1", optional = true }
tracing-subscriber = { version = "0.3", default-features = false }
tokio = { version = "1.24.1", features = ["full"] }
aead = { version = "0.5.2" }
bytemuck = { version = "1.14.1", features = [
    "derive",
    "min_const_generics",
    "extern_crate_alloc",
] }
chacha20 = { version = "0.9" }
chacha20poly1305 = { version = "0.10.1" }
signature = { version = "2.2.0" }
zeroize = "1.6.1"
sl-mpc-mate = { git = "https://github.com/silence-laboratories/sl-crypto.git", rev = "ff63353", features = ["simple-relay"] }
rust_decimal = "1.30.0"
rust_decimal_macros = "1.30.0"
merlin = "3.0.0"

[workspace]
members = [
    ".",
    "crates/sahamati",
]

[[bench]]
name = "sl-compute"
harness = false

[dev-dependencies]
rand_chacha = "0.3"
criterion = "0.5"
