[package]
name = "sahamati"
version = "0.1.0"
edition = "2021"

[dependencies]
sl-compute = { path = "../.." }
serde_json = "1.0.133"
serde = { version = "1.0.216", features = ["derive"] }
chrono = "0.4.39"
curve25519-dalek = "4.1.3"
reqwest = "0.12.9"
tokio = "1.42.0"
base64 = "0.22.1"
rust_decimal = "1.30.0"
rust_decimal_macros = "1.30.0"
merlin = "3.0.0"
sl-mpc-mate = { git = "https://github.com/silence-laboratories/sl-crypto.git", rev = "ff63353", features = ["simple-relay"] }